[package]
name = "dpapi"
version = "0.0.0"
edition = "2024"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "A Rust implementation of Windows DPAPI"
publish = false # not ready yet

[lib]
name = "dpapi"

[features]
tsssp = ["sspi/tsssp"]

[dependencies]
bitflags.workspace = true
byteorder.workspace = true
num-derive.workspace = true
num-traits = { workspace = true, default-features = true }
uuid = { workspace = true, features = ["std"] }
picky-asn1.workspace = true
picky-asn1-der.workspace = true
picky-krb.workspace = true
picky-asn1-x509 = { workspace = true, features = ["pkcs7"] }
sha1.workspace = true
sha2.workspace = true
rand.workspace = true
getrandom.workspace = true
hmac.workspace = true
digest = "=0.11.0-rc.5"
tracing = { workspace = true, default-features = true }
whoami.workspace = true

dpapi-core = { workspace = true, features = ["alloc"] }
dpapi-pdu.workspace = true
dpapi-transport.workspace = true
sspi = { path = "../..", version = "0.18" } # public

kbkdf = "0.0.1"
elliptic-curve = { version = "=0.14.0-rc.19", features = ["sec1", "std"] }
p521 = { version = "=0.14.0-rc.3", features = ["ecdh"] }
p256 = { version = "=0.14.0-rc.3", features = ["ecdh"] }
p384 = { version = "=0.14.0-rc.3", features = ["ecdh"] }
concat-kdf = { git = "https://github.com/RustCrypto/KDFs.git", rev = "f2f5c03" } # TODO: We need the new version, but it's not released yet.
typenum = "1.18"
aes-kw = "=0.3.0-rc.1"
aes-gcm = { version = "=0.11.0-rc.2", features = ["getrandom"] }
url = "2.5"

thiserror = "2.0"
regex = "1.12"

# Pin transitive dependencies
# TODO: Remove when stable versions will be released
block-buffer = "=0.11.0"
block-padding = "0.4"
crypto-common = "=0.2.0-rc.8"
crypto-bigint = "=0.7.0-rc.18"
hkdf = "=0.13.0-rc.3"
sec1 = "=0.8.0-rc.11"
pkcs8 = "=0.11.0-rc.8"
der = "=0.8.0-rc.10"
spki = "=0.8.0-rc.4"
pem-rfc7468 = "1.0"
signature = "=3.0.0-rc.6"
ecdsa = "=0.17.0-rc.11"
rfc6979 = "=0.5.0-rc.3"
aes = "=0.9.0-rc.2"
aead = "=0.6.0-rc.5"
cipher = "=0.5.0-rc.3"
inout = "=0.2.2"
ctr = "=0.10.0-rc.2"
ghash = "=0.6.0-rc.3"
polyval = "=0.7.0-rc.3"
universal-hash = "=0.6.0-rc.4"
ed25519 = "=3.0.0-rc.2"
cbc = "=0.2.0-rc.1"
des = "=0.9.0-rc.1"
pbkdf2 = "=0.13.0-rc.1"
md-5 = "=0.11.0-rc.2"
keccak = "=0.2.0-rc.0"
pkcs1 = "=0.8.0-rc.4"
rsa = { version = "=0.10.0-rc.12", default-features = false }
sha3 = "=0.11.0-rc.3"
ff = { version = "=0.14.0-pre.0", default-features = false }
group = "=0.14.0-pre.0"
primefield = "=0.14.0-rc.3"
primeorder = "=0.14.0-rc.3"
ed25519-dalek = "=3.0.0-pre.4"
curve25519-dalek = "=5.0.0-pre.4"
crypto-primes = "=0.7.0-pre.6"
x25519-dalek = "=3.0.0-pre.4"

[dev-dependencies]
paste = "1.0"

[lints]
workspace = true
