[package]
name = "winscard"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "A Rust implementation of WinSCard"

[features]
std = ["tracing/std", "base64", "picky-asn1-der"]

[lib]
name = "winscard"

[dependencies]
bitflags = "2.6"
iso7816 = "0.1"
iso7816-tlv = "0.4"
picky = { version = "7.0.0-rc.8", default-features = false, features = ["x509"] }
picky-asn1-x509 = { version = "0.12" }
tracing = { version = "0.1", features = ["attributes"], default-features = false }
time = { version = "0.3", default-features = false, features = [
    "formatting",
] }
uuid = { version = "1.10", features = ["v4"], default-features = false }
flate2 = { version = "1.0", features = ["zlib", "rust_backend"], default-features = false }
rsa = { version = "0.9", features = ["hazmat", "sha1"], default-features = false }
rand_core = "0.6"
sha1 = { version = "0.10", default-features = false }
base64 = { version = "0.22" , optional = true }
picky-asn1-der = { version = "0.4", optional = true }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
proptest = "1.5"
rand = "0.8"
