[package]
name = "winscard"
version = "0.2.5"
edition = "2024"
readme = "README.md"
license = "MIT/Apache-2.0"
homepage = "https://github.com/devolutions/sspi-rs"
repository = "https://github.com/devolutions/sspi-rs"
authors = ["Devolutions Inc. <infos@devolutions.net>"]
description = "A Rust implementation of WinSCard"

[features]
std = ["tracing/std", "base64", "picky-asn1-der"]

[lib]
name = "winscard"

[dependencies]
bitflags.workspace = true
iso7816 = "0.1"
iso7816-tlv = "0.4"
picky = { workspace = true, features = ["x509"] }
picky-asn1-x509.workspace = true
tracing = { workspace = true, features = ["attributes"] }
time = { workspace = true, features = [
    "formatting",
] }
uuid = { workspace = true, features = ["v4"] }
flate2 = { version = "1.1", default-features = false }
rsa = { workspace = true, features = ["hazmat", "sha1"] }
rand_core = "0.9"
sha1.workspace = true
base64 = { workspace = true , optional = true }
picky-asn1-der = { workspace = true, optional = true }
num-derive.workspace = true
num-traits.workspace = true
crypto-bigint.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
flate2 = { version = "1.1", default-features = false, features = ["zlib"] }

# Apple Clang cannot use system zlib for wasm32-unknown-unknown
[target.'cfg(target_arch = "wasm32")'.dependencies]
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
proptest.workspace = true
rand.workspace = true

[lints]
workspace = true
