[package]
name = "wasm-testcompile"
version = "0.0.0"
license = "MIT/Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
sspi = { path = "../.." }

whoami = "0.5"
wasm-bindgen = "0.2"

# Support for WASM.
# Note that currently, most of our dependencies are still depending on getrandom 0.2, but some already switched to 0.3.
# We avoid updating the packages in the workspace Cargo.lock, but we are following the evolution of the ecosystem for
# wasm-testcompile.
getrandom02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
